overflow fix

--- a/css/home.css
+++ b/css/home.css
@@ -179,13 +179,14 @@ li a::after {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  html{
+    overflow-y: visible !important;
+    overflow-x: hidden !important;
+  }
   body{
     overflow-y: visible;
     height:fit-content;
     height:100vh;
-  }
-  html{
-    overflow-y: visible !important;
   }
   li{
     width:100%;
